# google-team4

./: .gitignore  README.md  tree.txt
auto_complete/: README.md  app.py  pyproject.toml  run.sh
auto_complete/data/sample/: a.txt
auto_complete/src/: tree.txt
auto_complete/src/autocomplete/: __init__.py  __main__.py  bst.py  config.py  corpusdb.py  engine.py  fast_dir_ingest.py  index.py  loader.py  models.py  normalize.py  search.py  storage.py
auto_complete/src/autocomplete/DB/: corpusdb.py  storage.py
auto_complete/src/autocomplete/backend/: __main__.py  config.py  search.py
auto_complete/src/autocomplete/backend/DB/: __main__.py  acx.py  corpusdb.py  index.py  storage.py
auto_complete/src/backend/: __init__.py  bst.py  config.py  engine.py  loader.py  models.py  normalize.py  search.py
auto_complete/src/backend/DB/: acx.py  api.py  corpusdb.py  index.py  memory_store.py  sqlite_store.py  storage.py  store_base.py
auto_complete/src/e2e/: test_augment_query.py  test_frontend_complete_api_json.py  test_frontend_health_or_fallback.py  test_frontend_home_page_renders.py  test_integration_build_memory_complete.py  test_integration_empty_and_short_query.py  test_integration_multiple_roots.py  test_integration_persist_acx_cdb_reload_query.py  test_integration_result_schema_sanity.py  test_integration_topk_limit_and_types.py  test_integration_unicode_normalization.py
auto_complete/src/frontend/: __init__.py  __main__.py  web.py
