[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_complete"
version = "0.1.0"
description = "Google-style sentence autocomplete (Part A) with BST K-grams"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
